--- a/index.html
+++ b/index.html
@@ -539,13 +539,17 @@
 
         .card-front {
             /* background: linear-gradient(135deg, #2c1810 0%, #8b0000 100%); */
-            background-image: url(./images/NoSatellite.png) center/cover;
+            background-image: url(./images/NoSatellite.png);
+            background-position: center;
+            background-size: cover;
             border-left: 6px solid #ff4757;
         }
 
         .card-back {
             /* background: linear-gradient(135deg, #0f3460 0%, #0c7b93 100%); */
-            background-image: url(./images/Satellite.png) center/cover;
+            background-image: url(./images/Satellite.png);
+            background-position: center;
+            background-size: cover;
             transform: rotateY(180deg);
             border-left: 6px solid #2ed573;
         }
