update section for readability

--- a/index.html
+++ b/index.html
@@ -600,22 +600,17 @@
         }
 
         .card-section {
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 255, 255, 0.3);
             border-radius: 12px;
             padding: 20px;
             border-left: 4px solid rgba(255, 255, 255, 0.3);
             transition: all 0.3s ease;
         }
 
-        .card-section:hover {
-            background: rgba(255, 255, 255, 0.08);
-            border-left-color: #ffd93d;
-        }
-
         .section-title {
             font-size: 1rem;
             font-weight: 600;
-            color: #ffd93d;
+            color: #feca34;
             margin-bottom: 12px;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -628,7 +623,7 @@
             width: 20px;
             height: 20px;
             border-radius: 50%;
-            background: #ffd93d;
+            background: #feca34;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -642,12 +637,12 @@
             line-height: 1.6;
             font-size: 0.95rem;
             min-height: 80px;
-            background: rgba(255, 255, 255, 0.03);
+            background: rgba(255, 255, 255, 0.6);
             border-radius: 8px;
             padding: 15px;
             border: 1px dashed rgba(255, 255, 255, 0.2);
             font-style: italic;
-            color: #b8b8d4;
+            color: rgb(0, 0, 0);
             height: auto;
         }
 
