--- a/index.html
+++ b/index.html
@@ -235,19 +235,6 @@
             font-size: 1rem;
         }
 
-        #fullscreen-button {
-            padding: 10px 24px;           /* Adjust padding to fit your text */
-            background: #f0f0f0;          /* Button background color */
-            border: 1px solid #ddd;       /* Optional border */
-            border-radius: 24px;          /* High value for pill shape */
-            font-size: 16px;              /* Adjust font size as needed */
-            cursor: pointer;
-        }
-        #fullscreen-button:hover {
-            background: #feca34;          /* Hover background color */
-        }
-
-
         @media (max-width: 768px) {
             .cards-grid {
                 grid-template-columns: 1fr;
@@ -299,12 +286,12 @@
 
         <div class="cards-grid" id="cardsGrid">
             <!-- Cards will be generated here -->
-            <button id="fullscreen-button">Go Fullscreen</button>
+            <!-- <button id="fullscreen-button">Go Fullscreen</button> -->
         </div>
     </div>
 
     <script>
-        document.getElementById('fullscreen-btn').addEventListener('click', function() {
+        document.getElementById('fullscreen-button').addEventListener('click', function() {
             if (document.documentElement.requestFullscreen) {
                 document.documentElement.requestFullscreen();
             } else if (document.documentElement.webkitRequestFullscreen) { // Safari
