--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ANT61 Beacon Scenario Cards</title>
+    <title>ANT61 Beacon Story Cards</title>
     <style>
         * {
             margin: 0;
@@ -277,6 +277,7 @@
         <div class="header">
             <h1>ANT61 Beacon Scenario Cards</h1>
             <p>Interactive scenarios comparing satellite operations with and without The Beacon technology</p>
+            <button id="fullscreen-btn">Go Fullscreen</button>
         </div>
 
         <div class="instructions">
@@ -290,6 +291,15 @@
     </div>
 
     <script>
+        document.getElementById('fullscreen-btn').addEventListener('click', function() {
+            if (document.documentElement.requestFullscreen) {
+                document.documentElement.requestFullscreen();
+            } else if (document.documentElement.webkitRequestFullscreen) { // Safari
+                document.documentElement.webkitRequestFullscreen();
+            } else if (document.documentElement.msRequestFullscreen) { // IE11
+                document.documentElement.msRequestFullscreen();
+            }
+        });
         const scenarios = [
             {
                 title: "Satellite Anomaly",
